Adjusts for babel transpilation
